--- a/src/IBMMQResilientClient.csproj
+++ b/src/IBMMQResilientClient.csproj
@@ -8,10 +8,12 @@
     <RepositoryUrl>https://github.com/micheleissa/IBMMQResilientClient</RepositoryUrl>
     <PackageTags>C# ibm mq netcore queue</PackageTags>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageVersion>1.0.0</PackageVersion>
+    <PackageVersion>0.1.0</PackageVersion>
     <IsPackable>true</IsPackable>
     <Company />
     <RepositoryType>GitHub</RepositoryType>
+    <AssemblyVersion>0.0.1.0</AssemblyVersion>
+    <FileVersion>0.0.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
